# Leetcode-work

./: .gitignore  1046_Last_Stone_Weight.ipynb  1396_Design_Underground_System.ipynb  289_Game_of_Life.ipynb  374_Guess_Higher_Lower.ipynb  700_Binary_Node_Search.ipynb  704_Binary_Search.ipynb  Classification.ipynb  LogisticalRegression.ipynb  README.md  TitanicClassification.ipynb  project.ipynb  regression.ipynb
1046_Last_Stone_Weight/: 1046_Last_Stone_Weight.ipynb
11_Container_With_Most_Water/: README.md
122_Best_Time_to_Buy_and_Sell_Stocks_II/: README.md
125_Valid_Palindrome/: README.md
12_Integer_to_Roman/: README.md
134_Gas_Station/: README.md
135_Candy/: README.md
1480_Running_Sum_1D_Array/: 1480_Running_Sum_1D_Array  1480_Running_Sum_1D_Array.cpp  1480_Running_Sum_1D_Array.ipynb
151_Reverse_Words_in_String/: README.md
167_Two_Sum_II_Input_Array_Sorted/: README.md
169_Majority_Element/: README.md
177_NthHighestSalary/OCaml/solution/: dune-project
177_NthHighestSalary/OCaml/solution/_build/: .db  .digest-db  log
177_NthHighestSalary/OCaml/solution/_build/default/: solution.dune-package
177_NthHighestSalary/OCaml/solution/_build/default/test/: solution.ml
177_NthHighestSalary/OCaml/solution/_build/default/test/.merlin-conf/: exe-solution
177_NthHighestSalary/OCaml/solution/_build/default/test/.solution.eobjs/byte/: dune__exe__Solution.cmi  dune__exe__Solution.cmti
177_NthHighestSalary/OCaml/solution/_build/default/test/.solution.eobjs/native/: dune__exe__Solution.cmx
177_NthHighestSalary/OCaml/solution/test/: dune
Two Sum/: TwoSum  (+3 more)
(+161 files in other folders)
